# axum_templates

./: README.md
default/: Cargo.toml
default/src/: main.rs
default/src/routes/root/: mod.rs  router.rs  service.rs
default/src/routes/root/dtos/: health_response.rs  mod.rs
default/src/routes/root/tests/: service.rs
default/src/routes/user/: mod.rs  router.rs  service.rs
default/src/routes/user/dtos/: user.rs
default/src/routes/user/tests/: service.rs
middleware_default/: #name#.rs
new_route_with_crud/: mod.rs  router.rs  service.rs
new_route_with_crud/dtos/: create_#name#_request.rs  create_#name#_response.rs  delete_#name#_response.rs  get_#name#_response.rs  list_#name#_response.rs  mod.rs  update_#name#_request.rs  update_#name#_response.rs
new_route_with_crud/tests/: service.rs
new_route_with_crud/vo/: #name#.rs  mod.rs
