[package]
name = "default"
version = "0.1.0"
edition = "2021"
authors = ["anonymous <foo@bar.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = [] }
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["full"] }
thiserror = "1.0.38"
tower-http = { version = "0.3.5", features=["cors", "trace"] }
serde_json = "1.0.48"
serde = { version="1.0.105", features=["derive"] }
tracing = "0.1.37"
